<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical">

    <EditText
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:id="@+id/name_edit_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/name" />

    <EditText
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="phone"
        android:layout_marginTop="3dp"
        android:id="@+id/number_edit_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<Button                                 TODO УВЫ пока не работает
            android:id="@+id/add_file_button"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file" />-->

        <EditText
            android:id="@+id/avatar_url_field"
            android:layout_width="400dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:hint="@string/url" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/container_layout"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/share" />

        <Button
            android:id="@+id/add_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/edit_do" />

    </LinearLayout>
</LinearLayout>